[package]
name = "test_service"
version = "0.1.0"
authors = ["sombrastudios <nils.martel@graphmasters.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js = { path = ".." }
rocket = "0.4.2"                    # Web framework for nightly with a focus on ease-of-use, expressibility, and speed. 
